# terminal

./: .gitignore  .replit  pnpm-lock.yaml  pnpm-workspace.yaml  replit.md
artifacts/terminal/: Cargo.toml
artifacts/terminal-ui/: index.html  package.json  vite.config.tauri.ts  vite.config.ts
artifacts/terminal-ui/.replit-artifact/: artifact.toml
artifacts/terminal-ui/src/: App.tsx  index.css
artifacts/terminal-ui/src-tauri/: Cargo.toml  tauri.conf.json
artifacts/terminal-ui/src-tauri/capabilities/: default.json
artifacts/terminal-ui/src-tauri/icons/: icon.icns
artifacts/terminal-ui/src-tauri/src/: lib.rs  main.rs
artifacts/terminal-ui/src/components/ai/: AiPanel.tsx
artifacts/terminal-ui/src/components/command-palette/: CommandPalette.tsx
artifacts/terminal-ui/src/components/layout/: StatusBar.tsx  TopBar.tsx
artifacts/terminal-ui/src/components/sidebar/: Sidebar.tsx
artifacts/terminal-ui/src/components/terminal/: CommandBlock.tsx  (+2 more)
artifacts/terminal-ui/src/hooks/: useKeyboardShortcuts.ts
artifacts/terminal-ui/src/lib/: terminalThemes.ts
artifacts/terminal-ui/src/pages/: HistoryPage.tsx  SettingsPage.tsx  TerminalWorkspace.tsx  WorkflowsPage.tsx
artifacts/terminal-ui/src/stores/: aiStore.ts  settingsStore.ts  terminalStore.ts  workspaceStore.ts
artifacts/terminal-ui/src/types/: index.ts
artifacts/terminal/src/: main.rs
artifacts/terminal/src/pty/: manager.rs  session.rs
artifacts/terminal/src/pty_std/: manager.rs  session.rs
attached_assets/: Pasted--Build-a-Warp-Inspired-Terminal-UI-Build-a-modern-deskt_1781019984947.txt
(+4 files in other folders)
